--- a/Analysis/Readme.Rmd
+++ b/Analysis/Readme.Rmd
@@ -1,30 +1,21 @@
 ---
-title: "Readme"
+title: "Readme File for "
 author: "Sina Jafarzadeh"
 date: '2018-03-02'
 output: html_document
 ---
+# Step-1-Data Processing
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
-```
+- This directory will include the code and images on the Preprocessing stage 
 
-## R Markdown
+# Step-2-Single Probe Analysis
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+- This directory will include the code and images on the PCA and the correlation results of each probe and gene pair 
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
+# Step-3-Multiple Probe Analysis
 
-```{r cars}
-summary(cars)
-```
+- This directory will include the code and images on the exploration of multiple probe regression (full model using all probes that are significant), nonlinear regression, and LASSO variable selection, Stepwise (Forward and Backward) variable selection, and neural network method
 
-## Including Plots
+# Step-4-Biological Plausibility
 
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+- This directory includes the visualizations and explanation behind biological reasonings 
