--- a/Step-2-Single Probe Analysis/Data/Readme.Rmd
+++ b/Step-2-Single Probe Analysis/Data/Readme.Rmd
@@ -5,3 +5,12 @@ date: '2018-04-02'
 output: html_document
 ---
 
+## rosmap_postprocV2.RData
+
+- The data sets produced here consists of the results from Step 1. The .RData folder consists of three data sets: probes_subjects, subjects_genes, and probes_genes_distance. The probes_subjects data consists of DNA methylation probe data, subjects_genes consists of gene expression values, and probes_genes_distance consists of the distances on probes and genes where 0 represents a distance over 1Mb. Since it is too large to be uploaded in github, the data set could be found in this Google Drive Folder:
+
+https://drive.google.com/drive/folders/1u7J2reJVtPl2IVVytpTqWqJm-76lu0OY?usp=sharing
+
+## cor_test_results_PCA_lapply_V4.rds
+
+- The data set 
